first draft of gini function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,9 @@ Package: GiniCoefficient
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
+Author: Aly O'Mahoney
 Maintainer: The package maintainer <yourself@somewhere.net>
+Depends: dplyr, magrittr
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
